--- a/resources/sass/user/home.scss
+++ b/resources/sass/user/home.scss
@@ -19,7 +19,7 @@ $sidebar-width: 215px;
         flex-direction: column;
         justify-content: flex-start;
     }
-    .Home {
+    .PageContentContainer {
         background: $dark-white;
     }
 }
