finishing old orders design for desktop integrated with backend

--- a/public/css/landing/styles.css
+++ b/public/css/landing/styles.css
@@ -74,6 +74,7 @@ button {
   padding: 0 80px;
   height: 28px;
   border-bottom: 1px solid #15B2D3;
+  background: #fff;
 }
 
 .header-container .left,
