--- a/resources/sass/landing/styles.scss
+++ b/resources/sass/landing/styles.scss
@@ -26,6 +26,7 @@
     padding: 0 80px;
     height: $header-height;
     border-bottom: 1px solid $blue;
+    background: $white;
     .left,
     .right {
         display: flex;
