--- a/public/css/login/styles.css
+++ b/public/css/login/styles.css
@@ -143,3 +143,259 @@ button {
 
 /* ----- XX Login Container XX ----- */
 
+/* --------- Reset Password --------- */
+
+.reset-password-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 28px);
+  padding: 0 140px;
+}
+
+.reset-password-container .right {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.reset-password-container .right .title {
+  font-size: 24px;
+  color: #15B2D3;
+  margin-bottom: 36px;
+  font-family: "Lato-Bold";
+}
+
+.reset-password-container .right .subtitle {
+  font-size: 14px;
+  text-align: center;
+  width: 250px;
+  color: #00000080;
+  margin-bottom: 30px;
+}
+
+.reset-password-container .right .form-container {
+  width: 100%;
+}
+
+.reset-password-container .right .form-container .input-container {
+  display: flex;
+  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.reset-password-container .right .form-container .input-container .form-label {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 18px;
+  margin-top: 12px;
+  color: #000;
+}
+
+.reset-password-container .right .form-container .input-container .form-input {
+  width: 536px;
+  height: 45px;
+  background: #F3F3F3;
+  border-radius: 23px;
+  padding: 24px;
+  margin-bottom: 24px;
+  font-size: 14px;
+}
+
+.reset-password-container .right .form-container .button-container {
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.reset-password-container .right .form-container .button-container .login-button {
+  border-radius: 20px;
+  width: 150px;
+  height: 40px;
+  background: #FDBD42;
+  width: 200px;
+  margin: 40px auto;
+  font-size: 18px;
+  color: #fff;
+}
+
+/* --------- XX Reset Password XX --------- */
+
+/* ---------  Verify Phone  --------- */
+
+.verify-phone-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 28px);
+  padding: 0 140px;
+}
+
+.verify-phone-container .right {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.verify-phone-container .right .title {
+  font-size: 24px;
+  font-family: "Lato-Bold";
+  color: #15B2D3;
+  margin-bottom: 36px;
+}
+
+.verify-phone-container .right .subtitle {
+  font-size: 14px;
+  text-align: center;
+  color: #00000080;
+  margin-bottom: 30px;
+}
+
+.verify-phone-container .right .form-container {
+  width: 100%;
+}
+
+.verify-phone-container .right .form-container .input-container {
+  display: flex;
+  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: row;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.verify-phone-container .right .form-container .input-container .digit-input {
+  height: 45px;
+  width: 45px;
+  background: #F3F3F3;
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 24px;
+  font-size: 14px;
+  text-align: center;
+  margin: 0 6px;
+}
+
+.verify-phone-container .right .form-container .button-container {
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.verify-phone-container .right .form-container .button-container .login-button {
+  border-radius: 20px;
+  width: 150px;
+  height: 40px;
+  background: #FDBD42;
+  width: 200px;
+  margin: 40px auto;
+  font-size: 18px;
+  color: #fff;
+}
+
+/* ---------  XX Verify Phone XX  --------- */
+
+.renew-password-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 28px);
+  padding: 0 140px;
+}
+
+.renew-password-container .right {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.renew-password-container .right .title {
+  font-size: 24px;
+  color: #15B2D3;
+  margin-bottom: 36px;
+  font-family: "Lato-Bold";
+}
+
+.renew-password-container .right .subtitle {
+  font-size: 14px;
+  text-align: center;
+  color: #00000080;
+  margin-bottom: 40px;
+}
+
+.renew-password-container .right .form-container {
+  width: 100%;
+}
+
+.renew-password-container .right .form-container .input-container {
+  display: flex;
+  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.renew-password-container .right .form-container .input-container .form-label {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 18px;
+  margin-top: 12px;
+  color: #000;
+}
+
+.renew-password-container .right .form-container .input-container .form-input {
+  width: 536px;
+  height: 45px;
+  background: #F3F3F3;
+  border-radius: 23px;
+  padding: 24px;
+  margin-bottom: 24px;
+  font-size: 14px;
+}
+
+.renew-password-container .right .form-container .button-container {
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.renew-password-container .right .form-container .button-container .login-button {
+  border-radius: 20px;
+  width: 150px;
+  height: 40px;
+  background: #FDBD42;
+  width: 200px;
+  margin: 40px auto;
+  font-size: 18px;
+  color: #fff;
+}
+
