--- a/public/css/landing/styles.css
+++ b/public/css/landing/styles.css
@@ -203,7 +203,15 @@ button {
   width: 100%;
   height: 172px;
   border-radius: 0px 0px 50px 50px;
-  background: #15B2D3;
+  position: relative;
+}
+
+.city-location .city-location-image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 172px;
 }
 
 .city-location .left {
