--- a/resources/sass/landing/styles.scss
+++ b/resources/sass/landing/styles.scss
@@ -126,7 +126,15 @@
     width: 100%;
     height: 172px;
     border-radius: 0px 0px 50px 50px;
-    background: $blue;
+    //background: $blue;
+    position: relative;
+    .city-location-image {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 172px;
+    }
     .left {
         color: $white;
         direction: rtl;
