finishing user home screen for desktop integrated with backend remaining the view pickup schedule link

--- a/public/css/user/home.css
+++ b/public/css/user/home.css
@@ -75,7 +75,7 @@ button {
 }
 
 #app .PageContentContainer {
-  background: #F3F3F3;
+  background: #FAFAFA;
   min-height: calc(100vh - 28px);
   overflow-x: hidden;
   padding: 0 130px 0 30px;
