--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -38,6 +38,7 @@ $orange: #FDBD42;
 $dark-orange: #FFA800;
 $white: #fff;
 $dark-white: #F3F3F3;
+$light-white: #FAFAFA;
 $dark-grey: #00000080;
 $light-grey: #F8F8F8;
 $text-dark-grey: #000000B3;
