--- a/resources/sass/user/home.scss
+++ b/resources/sass/user/home.scss
@@ -27,7 +27,7 @@ $sidebar-width: 215px;
         }
     }
     .PageContentContainer {
-        background: $dark-white;
+        background: $light-white;
         min-height: calc(100vh - #{$header-height});
         overflow-x: hidden;
         padding: 0 130px 0 30px;
