--- a/public/css/landing/styles.css
+++ b/public/css/landing/styles.css
@@ -279,7 +279,7 @@ button {
   display: flex;
   flex-direction: column;
   margin: 20px auto;
-  height: 600px;
+  min-height: 600px;
   padding: 20px 130px;
   background: #F8F8F8;
 }
@@ -376,7 +376,7 @@ button {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  height: 500px;
+  min-height: 500px;
   padding: 20px 130px 0 130px;
 }
 
