--- a/resources/sass/landing/styles.scss
+++ b/resources/sass/landing/styles.scss
@@ -193,7 +193,7 @@
     display: flex;
     flex-direction: column;
     margin: 20px auto;
-    height: 600px;
+    min-height: 600px;
     padding: 20px 130px;
     background: $light-grey;
     .title-container {
@@ -277,7 +277,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    height: 500px;
+    min-height: 500px;
     padding: 20px 130px 0 130px;
     .title-container {
         display: flex;
