--- a/public/css/user/home.css
+++ b/public/css/user/home.css
@@ -129,8 +129,7 @@ button {
 }
 
 #app .Sidebar-container {
-  min-height: calc(100vh - 28px);
-  height: 768px;
+  height: calc(100vh - 28px);
   width: 215px;
   position: relative;
 }
