--- a/public/css/admin/styles.css
+++ b/public/css/admin/styles.css
@@ -247,6 +247,7 @@ body {
   font-size: 16px;
   margin-bottom: 10px;
   color: #000;
+  font-family: "Open-Sans-Semibold";
 }
 
 .page-container .login-container .left .form-container .input-container .form-input {
@@ -291,4 +292,24 @@ body {
 }
 
 /* XX Login Page XX */
+
+/* New Admin Page */
+
+.password-container .email {
+  font-family: "Open-Sans-Bold";
+  font-size: 16px;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.password-container .hint {
+  width: 100%;
+  text-align: center;
+  font-family: "Open-Sans-Regular";
+  font-size: 14px;
+  color: #393939;
+  margin-bottom: 30px;
+}
+
+/* xx New Admin Page xx */
 
