add packages in the landing page instead of download section .. scrolling need to be replaced

--- a/resources/sass/admin/styles.scss
+++ b/resources/sass/admin/styles.scss
@@ -121,6 +121,14 @@ $content-right-margin: 24px;
                         color: $white;
                     }
                 }
+                .new-admin {
+                    color: $blue;
+                    margin: 50px auto 20px;
+                    font-family: 'Open-Sans-Semibold';
+                    font-size: 16px;
+                    display: block;
+                    text-align: center;
+                }
             }
         }
         .right {
