--- a/public/css/admin/styles.css
+++ b/public/css/admin/styles.css
@@ -286,6 +286,15 @@ body {
   color: #fff;
 }
 
+.page-container .login-container .left .form-container .new-admin {
+  color: #15B2D3;
+  margin: 50px auto 20px;
+  font-family: "Open-Sans-Semibold";
+  font-size: 16px;
+  display: block;
+  text-align: center;
+}
+
 .page-container .login-container .right .vector {
   width: 536px;
   height: 374px;
