--- a/public/css/landing/styles.css
+++ b/public/css/landing/styles.css
@@ -529,51 +529,34 @@ button {
 
 /* ---------- XX Our Services XX ----------  */
 
-/* ----------  Download  ----------  */
+/* --------- Our Packages ---------- */
 
-.download {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: center;
-  align-items: center;
+.our-packages {
+  width: 100%;
+  min-height: 100vh;
   background: #F8F8F8;
   padding: 20px 130px;
-  height: 374px;
 }
 
-.download .left {
+.our-packages .title-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-end;
+  text-align: right;
+  margin-left: auto;
 }
 
-.download .left .download-title {
-  color: #15B2D3;
-  font-size: 18px;
-  margin: 20px 0;
+.our-packages .title-container .title {
+  font-size: 24px;
+  font-weight: bold;
 }
 
-.download .left .download-subtitle {
-  color: #15B2D3;
-  font-size: 14px;
-  margin: 20px 0;
+.our-packages .title-container .subtitle {
+  width: 300px;
   color: #000000B3;
 }
 
-.download .left .buttons-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 280px;
-}
-
-.download .left .buttons-container .download-button {
-  width: 127px;
-  height: 38px;
-}
-
-/* ---------- XX Download XX ----------  */
+/* --------- XX Our Packages XX ---------- */
 
 /* ---------- How it work ----------  */
 
@@ -584,8 +567,9 @@ button {
 .how-it-works .title-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  text-align: right;
+  align-items: flex-start;
+  text-align: left;
+  margin-right: auto;
 }
 
 .how-it-works .title-container .title {
