--- a/resources/sass/landing/styles.scss
+++ b/resources/sass/landing/styles.scss
@@ -349,44 +349,32 @@
 /* ---------- XX Our Services XX ----------  */
 
 
-/* ----------  Download  ----------  */
+/* --------- Our Packages ---------- */
 
-.download {
-    @include grid-1fr-1fr;
-    background: $light-grey;
+.our-packages {
+    width: 100%;
+    min-height: 100vh;
+    background: #F8F8F8;
     padding: 20px 130px;
-    height: 374px;
-    .left {
+    .title-container {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        .download-title {
-            color: $blue;
-            font-size: 18px;
-            margin: 20px 0;
+        align-items: flex-end;
+        text-align: right;
+        margin-left: auto;
+        .title {
+            font-size: 24px;
+            font-weight: bold;
         }
-        .download-subtitle {
-            color: $blue;
-            font-size: 14px;
-            margin: 20px 0;
+        .subtitle {
+            width: 300px;
             color: $text-dark-grey;
-        }
-        .buttons-container {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            width: 280px;
-            .download-button {
-                width: 127px;
-                height: 38px;
-            }
         }
     }
 }
 
 
-/* ---------- XX Download XX ----------  */
+/* --------- XX Our Packages XX ---------- */
 
 
 /* ---------- How it work ----------  */
@@ -396,8 +384,9 @@
     .title-container {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
-        text-align: right;
+        align-items: flex-start;
+        text-align: left;
+        margin-right: auto;
         .title {
             font-size: 24px;
             font-weight: bold;
