--- a/public/css/landing/styles.css
+++ b/public/css/landing/styles.css
@@ -145,6 +145,8 @@ button {
   height: 28px;
   border-bottom: 1px solid #15B2D3;
   background: #fff;
+  position: relative;
+  z-index: 3;
 }
 
 .header-container .left,
@@ -197,7 +199,7 @@ button {
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  padding: 20px 0;
+  padding: 40px 0 0 0;
   height: 122px;
 }
 
@@ -210,12 +212,17 @@ button {
 /* ----------  Hero Section  ----------  */
 
 .hero-container {
+  padding: 0 100px;
+  height: calc(100vh - 28px - 122px);
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-container .hero-flex {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: center;
   align-items: center;
-  padding: 0 100px;
-  height: calc(100vh - 28px - 122px);
 }
 
 .hero-container .left .title {
@@ -357,7 +364,7 @@ button {
   flex-direction: column;
   margin: 20px auto;
   min-height: 600px;
-  padding: 20px 130px;
+  padding: 60px 130px;
   background: #F8F8F8;
 }
 
@@ -453,8 +460,8 @@ button {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  min-height: 500px;
-  padding: 20px 130px 0 130px;
+  min-height: 100vh;
+  padding: 60px 130px;
 }
 
 .our-services-container .title-container {
@@ -481,6 +488,7 @@ button {
   align-items: center;
   padding: 30px 0;
   background: #fff;
+  margin-top: 20px;
 }
 
 .our-services-container .services-container .services-part {
@@ -535,10 +543,11 @@ button {
   width: 100%;
   min-height: 100vh;
   background: #F8F8F8;
-  padding: 20px 130px;
+  padding: 30px 130px 90px 130px;
 }
 
 .our-packages .title-container {
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -561,7 +570,7 @@ button {
 /* ---------- How it work ----------  */
 
 .how-it-works {
-  padding: 20px 130px;
+  padding: 40px 130px 80px 130px;
 }
 
 .how-it-works .title-container {
@@ -626,7 +635,7 @@ button {
   flex-direction: column;
   margin: 20px auto 0 auto;
   height: 700px;
-  padding: 20px 130px;
+  padding: 40px 130px 60px 130px;
   background: #F8F8F8;
 }
 
