--- a/resources/sass/landing/styles.scss
+++ b/resources/sass/landing/styles.scss
@@ -27,6 +27,8 @@
     height: $header-height;
     border-bottom: 1px solid $blue;
     background: $white;
+    position: relative;
+    z-index: 3;
     .left,
     .right {
         display: flex;
@@ -64,7 +66,7 @@
 
 .navbar-container {
     @include flex-center-center;
-    padding: 20px 0;
+    padding: 40px 0 0 0;
     height: $navbar-height;
     .navbar-item {
         margin: 0 10px;
@@ -78,9 +80,13 @@
 /* ----------  Hero Section  ----------  */
 
 .hero-container {
-    @include grid-1fr-1fr;
     padding: 0 100px;
     height: calc(100vh - #{$header-height} - #{$navbar-height});
+    display: flex;
+    flex-direction: column;
+    .hero-flex {
+        @include grid-1fr-1fr;
+    }
     .left {
         .title {
             color: $blue;
@@ -199,7 +205,7 @@
     flex-direction: column;
     margin: 20px auto;
     min-height: 600px;
-    padding: 20px 130px;
+    padding: 60px 130px;
     background: $light-grey;
     .title-container {
         display: flex;
@@ -282,8 +288,8 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    min-height: 500px;
-    padding: 20px 130px 0 130px;
+    min-height: 100vh;
+    padding: 60px 130px;
     .title-container {
         display: flex;
         flex-direction: column;
@@ -305,6 +311,7 @@
         align-items: center;
         padding: 30px 0;
         background: #fff;
+        margin-top: 20px;
         .services-part {
             display: flex;
             flex-direction: row;
@@ -355,8 +362,9 @@
     width: 100%;
     min-height: 100vh;
     background: #F8F8F8;
-    padding: 20px 130px;
+    padding: 30px 130px 90px 130px;
     .title-container {
+        margin-top: 50px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -380,7 +388,7 @@
 /* ---------- How it work ----------  */
 
 .how-it-works {
-    padding: 20px 130px;
+    padding: 40px 130px 80px 130px;
     .title-container {
         display: flex;
         flex-direction: column;
@@ -438,7 +446,7 @@
     flex-direction: column;
     margin: 20px auto 0 auto;
     height: 700px;
-    padding: 20px 130px;
+    padding: 40px 130px 60px 130px;
     background: $light-grey;
     .title-container {
         display: flex;
