semi-finished admin promocodes pages

--- a/resources/sass/admin/styles.scss
+++ b/resources/sass/admin/styles.scss
@@ -42,7 +42,7 @@ $content-right-margin: 24px;
             overflow-x: hidden;
             margin-top: $content-top-margin;
             width: calc(100% - #{$content-right-margin});
-            padding: 0 24px;
+            padding: 0 24px !important;
         }
     }
 }
