--- a/public/css/admin/styles.css
+++ b/public/css/admin/styles.css
@@ -178,7 +178,7 @@ body {
   overflow-x: hidden;
   margin-top: 24px;
   width: calc(100% - 24px);
-  padding: 0 24px;
+  padding: 0 24px !important;
 }
 
 /* XX Main Admin pages structure XX */
