--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -24,7 +24,24 @@ body {
 }
 
 p {
-    margin: 0;
+    // margin: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+a:hover {
+    text-decoration: none !important;
+}
+
+
+/* Bootstrap colors */
+
+.btn-primary {
+    background: #15B2D3 !important;
+    border-color: #15B2D3 !important;
+}
+
+.text-primary {
+    color: #15B2D3 !important;
 }
 
 
