--- a/public/css/register/styles.css
+++ b/public/css/register/styles.css
@@ -23,6 +23,7 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   font-family: "Lato-Regular" !important;
+  overflow-x: hidden;
 }
 
 p {
