--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -21,6 +21,7 @@ body {
     margin: 0 !important;
     padding: 0 !important;
     font-family: 'Lato-Regular' !important;
+    overflow-x: hidden;
 }
 
 p {
