--- a/resources/sass/landing/styles.scss
+++ b/resources/sass/landing/styles.scss
@@ -50,7 +50,7 @@
         }
         // on right
         .header-link {
-            height: 21px;
+            height: 31px;
         }
         .icon {
             margin: 0 10px;
@@ -81,7 +81,7 @@
 
 .hero-container {
     padding: 0 100px;
-    height: calc(100vh - #{$header-height} - #{$navbar-height});
+    // height: calc(100vh - #{$header-height} - #{$navbar-height});
     display: flex;
     flex-direction: column;
     .hero-flex {
@@ -102,7 +102,8 @@
         .buttons-container {
             @include flex-space-between-center;
             margin: 20px 0;
-            width: 348px;
+            max-width: 348px;
+            flex-wrap: wrap;
             .large-button {
                 @include large-rounded-button;
                 background: $white;
@@ -128,12 +129,13 @@
 /* ---------- City Location ----------  */
 
 .city-location {
-    @include grid-1fr-3fr;
-    column-gap: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     position: relative;
-    padding: 0 140px;
+    padding: 0 20px;
     width: 100%;
-    height: 172px;
+    min-height: 172px;
     border-radius: 0px 0px 50px 50px;
     //background: $blue;
     position: relative;
@@ -186,7 +188,7 @@
                 background: $orange;
                 color: $white;
                 right: 0px;
-                width: 150px;
+                width: 30%;
                 height: 50px;
                 font-size: 15px;
             }
@@ -288,7 +290,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    min-height: 100vh;
+    // min-height: 100vh;
     padding: 60px 130px;
     .title-container {
         display: flex;
@@ -306,49 +308,50 @@
     }
     .services-container {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         padding: 30px 0;
         background: #fff;
         margin-top: 20px;
-        .services-part {
+        .service-container {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
-            width: 80%;
-            margin: 20px 0;
-            .service-container {
+            align-items: flex-start;
+            justify-content: center;
+            width: 300px;
+            .icon {
+                width: 50px;
+                height: 50px;
+                margin: 0 20px;
+            }
+            .service-info {
                 display: flex;
-                flex-direction: row;
-                align-items: flex-start;
+                flex-direction: column;
                 justify-content: center;
-                width: 300px;
-                .icon {
-                    width: 50px;
-                    height: 50px;
-                    margin: 0 20px;
+                .title {
+                    font-size: 16px;
+                    font-weight: bold;
                 }
-                .service-info {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    .title {
-                        font-size: 16px;
-                        font-weight: bold;
-                    }
-                    .subtitle {
-                        font-size: 12px;
-                    }
-                    .read-more {
-                        font-size: 12px;
-                        margin: 5px 0 0 40px;
-                        color: $orange;
-                        font-weight: bold;
-                    }
+                .subtitle {
+                    font-size: 12px;
+                }
+                .read-more {
+                    font-size: 12px;
+                    margin: 5px 0 0 40px;
+                    color: $orange;
+                    font-weight: bold;
                 }
             }
         }
+        // .services-part {
+        //     display: flex;
+        //     flex-direction: row;
+        //     justify-content: space-between;
+        //     width: 80%;
+        //     margin: 20px 0;
+        // }
     }
 }
 
@@ -357,6 +360,10 @@
 
 
 /* --------- Our Packages ---------- */
+
+.PackageContainer {
+    margin: 20px !important;
+}
 
 .our-packages {
     width: 100%;
@@ -414,7 +421,7 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            width: 600px;
+            width: 100%;
             text-align: right;
             &.reverse {
                 margin: 5px auto 5px 0;
@@ -445,7 +452,7 @@
     display: flex;
     flex-direction: column;
     margin: 20px auto 0 auto;
-    height: 700px;
+    min-height: 700px;
     padding: 40px 130px 60px 130px;
     background: $light-grey;
     .title-container {
@@ -462,11 +469,11 @@
         }
     }
     .contact-form {
-        @include grid-1fr-1fr;
+        // @include grid-1fr-1fr;
         margin: 30px 0;
         .left {
             .form-image {
-                width: 444px;
+                max-width: 444px;
             }
         }
         .right {
@@ -475,6 +482,7 @@
             align-items: center;
             .form-input {
                 width: 100%;
+                min-width: 300px;
                 height: 50px;
                 border-radius: 25px;
                 padding: 0 24px;
@@ -567,3 +575,68 @@
 
 
 /* ------------- XX Contact US XX ---------- */
+
+
+/* RESPONSIVE */
+
+@media screen and (min-width: 991px) {
+    .form-image {
+        width: 100% !important;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .city-location {
+        justify-content: center !important;
+        .right,
+        .left {
+            margin: 20px auto !important;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .why-choose-us-container {
+        padding: 50px;
+    }
+    .our-services-container {
+        padding: 50px 20px;
+    }
+    .title-container {
+        text-align: center !important;
+        align-items: center !important;
+    }
+    .packages-title {
+        text-align: center;
+        margin-top: 20px;
+    }
+    .packages-container {
+        justify-content: center !important;
+    }
+    .step-container:nth-child(odd) {
+        flex-direction: column-reverse !important;
+        text-align: center !important;
+    }
+    .step-container:nth-child(even) {
+        flex-direction: column !important;
+        text-align: center !important;
+    }
+    .form-image {
+        display: none;
+    }
+    .our-packages {
+        padding: 50px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .section {
+        padding: 30px !important
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .section {
+        padding: 30px 10px !important
+    }
+}
