--- a/public/css/landing/styles.css
+++ b/public/css/landing/styles.css
@@ -222,12 +222,14 @@ button {
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  padding: 40px 0 0 0;
+  padding: 20px 0 20px 0;
   height: 122px;
 }
 
 .navbar-container .navbar-item {
   margin: 0 10px;
+  width: 130px;
+  text-align: center;
 }
 
 /* ---------- XX Navbar XX ----------  */
