--- a/resources/sass/register/styles.scss
+++ b/resources/sass/register/styles.scss
@@ -3,7 +3,7 @@
 @import "../global.scss";
 .register-container {
     @include grid-1fr-1fr;
-    height: calc(100vh - #{$header-height});
+    // height: calc(100vh - #{$header-height});
     padding: 0 140px;
     .left {
         .signup-vector {
